# pixelwise

./: .env.example  .gitignore  README.md  build.sh  data.json  predict.py  pyproject.toml  requirements.txt  setup-server.sh  test_api.py  test_env.py
app/: classifier.py  main.py  models.py
frontend/: app.js  index.html  style.css
tests/: test_demo.py
