[project]
name = "pixelwise"
version = "0.1.0"
description = ""
authors = [
    {name = "TaulantM5",email = "taulantmehmeti01@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pipreqs (==0.4.13)",
    "python-dotenv (>=1.2.2,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.3,<10.0.0)"
]
